# airport/src/main/java/hu/webuni/airport/web/AirportController.java
@@ -1,5 +1,6 @@
 package hu.webuni.airport.web;
 
+import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.NoSuchElementException;
@@ -7,96 +8,81 @@ import java.util.Optional;
 
 import javax.validation.Valid;
 
+import org.springframework.core.MethodParameter;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.web.PageableHandlerMethodArgumentResolver;
 import org.springframework.data.web.SortDefault;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.support.WebDataBinderFactory;
+import org.springframework.web.context.request.NativeWebRequest;
+import org.springframework.web.method.support.ModelAndViewContainer;
 import org.springframework.web.server.ResponseStatusException;
 
-import hu.webuni.airport.dto.AirportDto;
+import hu.webuni.airport.api.AirportControllerApi;
+import hu.webuni.airport.api.model.AirportDto;
+import hu.webuni.airport.api.model.HistoryDataAirportDto;
 import hu.webuni.airport.mapper.AirportMapper;
+import hu.webuni.airport.mapper.HistoryDataMapper;
 import hu.webuni.airport.model.Airport;
 import hu.webuni.airport.model.HistoryData;
 import hu.webuni.airport.repository.AirportRepository;
 import hu.webuni.airport.service.AirportService;
 import lombok.RequiredArgsConstructor;
 
-@RequiredArgsConstructor
 @RestController
-@RequestMapping("/api/airports")
-public class AirportController {
-
+@RequiredArgsConstructor
+public class AirportController implements AirportControllerApi{
+	
+	private final NativeWebRequest nativeWebRequest;
 	private final AirportService airportService;
 	private final AirportRepository airportRepository;
 	
 	private final AirportMapper airportMapper;
+	private final HistoryDataMapper historyDataMapper;
+	private final PageableHandlerMethodArgumentResolver pageableResolver;
 	
 	
-	@GetMapping
-	public List<AirportDto> getAll(@RequestParam Optional<Boolean> full,
-			@SortDefault("id") Pageable pageable){
-		boolean isFull = full.orElse(false);
-//		List<Airport> airports = airportService.findAll();
-		List<Airport> airports = isFull 
-				? airportService.findAllWithRelationships(pageable)
-//				? airportRepository.findAllWithAddressAndDepartures() --> N*M sor jön vissza, ha N arrival és M departure van
-				: airportRepository.findAll(pageable).getContent();
-		return isFull
-				? airportMapper.airportsToDtos(airports)
-				: airportMapper.airportSummariesToDtos(airports);
+	@Override
+	public Optional<NativeWebRequest> getRequest() {
+		return Optional.of(nativeWebRequest);
 	}
-	
-	@GetMapping("/{id}")
-	public AirportDto getById(@PathVariable long id) {
+
+	@Override
+	public ResponseEntity<AirportDto> createAirport(@Valid AirportDto airportDto) {
+		Airport airport = airportService.save(airportMapper.dtoToAirport(airportDto));
+		return ResponseEntity.ok(airportMapper.airportToDto(airport));
+	}
+
+	@Override
+	public ResponseEntity<Void> deleteAirport(Long id) {
+		airportService.delete(id);
+		return ResponseEntity.ok().build();
+	}
+
+	@Override
+	public ResponseEntity<AirportDto> getById(Long id) {
 		Airport airport = airportService.findById(id)
 				.orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
 		
-		return airportMapper.airportSummaryToDto(airport);
-//		return airportMapper.airportToDto(airport);
+		return ResponseEntity.ok(airportMapper.airportSummaryToDto(airport));
 	}
-	
-//	@GetMapping("/{id}/history")
-//	public List<AirportDto> getHistoryById(@PathVariable long id) {
-//		List<Airport> airports = airportService.getAirportHistory(id);
-//		
-//		return airportMapper.airportSummariesToDtos(airports);
-//	}
-	
-	@GetMapping("/{id}/history")
-	public List<HistoryData<AirportDto>> getHistoryById(@PathVariable long id) {
+
+	@Override
+	public ResponseEntity<List<HistoryDataAirportDto>> getHistoryById(Long id) {
 		List<HistoryData<Airport>> airports = airportService.getAirportHistory(id);
 		
-		List<HistoryData<AirportDto>> airportDtosWithHistory = new ArrayList<>();
+		List<HistoryDataAirportDto> airportDtosWithHistory = new ArrayList<>();
 		
 		airports.forEach(hd -> {
-			airportDtosWithHistory.add(new HistoryData<>(
-//					airportMapper.airportSummaryToDto(hd.getData()),
-					airportMapper.airportToDto(hd.getData()),
-					hd.getRevType(),
-					hd.getRevision(),
-					hd.getDate()
-					));
+			airportDtosWithHistory.add(historyDataMapper.airportHistoryDataToDto(hd));
 		});
-		return airportDtosWithHistory ;
+		return ResponseEntity.ok(airportDtosWithHistory) ;
 	}
-	
-	@PostMapping
-	public AirportDto createAirport(@RequestBody @Valid AirportDto airportDto) {
-		Airport airport = airportService.save(airportMapper.dtoToAirport(airportDto));
-		return airportMapper.airportToDto(airport);
-	}
-	
-	@PutMapping("/{id}")
-	public ResponseEntity<AirportDto> modifyAirport(@PathVariable long id, @RequestBody AirportDto airportDto) {
+
+	@Override
+	public ResponseEntity<AirportDto> modifyAirport(Long id, @Valid AirportDto airportDto) {
 		Airport airport = airportMapper.dtoToAirport(airportDto);
 		airport.setId(id);
 		try {
@@ -107,9 +93,44 @@ public class AirportController {
 			throw new ResponseStatusException(HttpStatus.NOT_FOUND);
 		}
 	}
+	
+	public void configPageable(@SortDefault("id") Pageable pageable) {}
 
-	@DeleteMapping("/{id}")
-	public void deleteAirport(@PathVariable long id) {
-		airportService.delete(id);
+	@Override
+	public ResponseEntity<List<AirportDto>> getAll(@Valid Boolean full, @Valid Integer page, @Valid Integer size,
+			@Valid String sort) {
+		
+		boolean isFull = full == null ? false : full;
+		
+		Pageable pageable = createPageable("configPageable");
+		
+		//		List<Airport> airports = airportService.findAll();
+		List<Airport> airports = isFull 
+				? airportService.findAllWithRelationships(pageable)
+//				? airportRepository.findAllWithAddressAndDepartures() --> N*M sor jön vissza, ha N arrival és M departure van
+				: airportRepository.findAll(pageable).getContent();
+		
+		List<AirportDto> resultList = isFull
+		? airportMapper.airportsToDtos(airports)
+		: airportMapper.airportSummariesToDtos(airports);
+		
+		return ResponseEntity.ok(resultList);
+
 	}
+
+	private Pageable createPageable(String pageableConfigurerMethodName) {
+		Method method;
+		try {
+			method = this.getClass().getMethod(pageableConfigurerMethodName, Pageable.class);
+		} catch (NoSuchMethodException | SecurityException e) {
+			e.printStackTrace();
+			throw new RuntimeException(e);
+		}
+		MethodParameter methodParameter = new MethodParameter(method, 0);
+		ModelAndViewContainer mavContainer = null;
+		WebDataBinderFactory binderFactory = null;
+		Pageable pageable = pageableResolver.resolveArgument(methodParameter, mavContainer, nativeWebRequest, binderFactory);
+		return pageable;
+	}
+
 }
